# zeit-tool-haskell

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  LICENSE  MIGRATION.md  README.md  RELEASE.md  launch-zeit-tool-gui.vbs  run-zeit-tool.ps1  zeit-lingq-tool.cabal  zt.cmd  zt.ps1
.github/workflows/: haskell-ci.yml
app/: Main.hs
gui/: Main.hs
gui/ZeitLingq/Gui/: BrowserSession.hs  Error.hs  Theme.hs
installer/: ZeitToolHaskell.iss
pkgconfig/: sdl2.pc
scripts/: build-installer.ps1  zeit-browser-login.ps1
src/ZeitLingq/: Cli.hs  Ports.hs
src/ZeitLingq/App/: Driver.hs  Model.hs  Runtime.hs  Startup.hs  Update.hs  UploadConfig.hs  ViewModel.hs
src/ZeitLingq/Core/: Batch.hs  Browse.hs  KnownWords.hs  Upload.hs
src/ZeitLingq/Domain/: Article.hs  Section.hs  Types.hs
src/ZeitLingq/Infrastructure/: Audio.hs  Lingq.hs  Settings.hs  Sqlite.hs  Zeit.hs
src/ZeitLingq/Text/: German.hs
test/: Spec.hs
