cabal-version:   3.14
name:            zeit-lingq-tool
version:         0.1.0.0
synopsis:        Haskell-first Zeit to LingQ desktop workflow
description:     Pure domain and app-state core for browsing Zeit articles and creating LingQ lessons.
license:         BSD-3-Clause
license-file:    LICENSE
category:        Application
author:          OpenAI Codex
maintainer:      noreply@example.com
build-type:      Simple
extra-doc-files:
    ARCHITECTURE.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/funwithcthulhu/zeit-tool-haskell.git

common warnings
    ghc-options: -Wall

common core-deps
    build-depends:
        aeson ^>=2.2.3.0,
        base ^>=4.18.3.0,
        bytestring ^>=0.11.5.0,
        containers ^>=0.6.7,
        directory ^>=1.3.8.0,
        filepath ^>=1.4.300.1,
        http-conduit ^>=2.3.9,
        sqlite-simple ^>=0.4.19.0,
        tagsoup ^>=0.14.8,
        text ^>=2.0.2,
        time ^>=1.12.2
    default-language: GHC2021

flag gui
    description: Build the optional Monomer GUI executable.
    default:     False
    manual:      True

library
    import:           warnings, core-deps
    hs-source-dirs:   src
    exposed-modules:
        ZeitLingq.App.Driver
        ZeitLingq.App.Model
        ZeitLingq.App.Runtime
        ZeitLingq.App.Startup
        ZeitLingq.App.UploadConfig
        ZeitLingq.App.Update
        ZeitLingq.App.ViewModel
        ZeitLingq.Cli
        ZeitLingq.Core.Batch
        ZeitLingq.Core.Browse
        ZeitLingq.Core.KnownWords
        ZeitLingq.Core.Upload
        ZeitLingq.Domain.Article
        ZeitLingq.Domain.Section
        ZeitLingq.Domain.Types
        ZeitLingq.Infrastructure.Settings
        ZeitLingq.Infrastructure.Audio
        ZeitLingq.Infrastructure.Lingq
        ZeitLingq.Infrastructure.Sqlite
        ZeitLingq.Infrastructure.Zeit
        ZeitLingq.Ports
        ZeitLingq.Text.German

executable zeit-lingq-tool
    import:           warnings, core-deps
    main-is:          Main.hs
    build-depends:
        zeit-lingq-tool
    hs-source-dirs:
        app

executable zeit-lingq-tool-gui
    import:           warnings, core-deps
    main-is:          Main.hs
    hs-source-dirs:
        gui
    if flag(gui)
        build-depends:
            monomer ^>=1.6.0.1,
            zeit-lingq-tool
    else
        buildable: False

test-suite zeit-lingq-tool-test
    import:           warnings, core-deps
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:
        test
    build-depends:
        hspec ^>=2.11.9,
        zeit-lingq-tool
